--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap:100,200,300,400,500,600,700');
 
-header{
+header {
     margin: 0;
 }
 
+.logo {
+background: url("../assets/images/studiofettle-logo.jpg");
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+min-height: 360px;
+transition: all .5s ease-in-out;
+-moz-transition: all .5s ease-in-out;
+-webkit-transition: all .5s ease-in-out;
+}
