--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap:100,200,300,400,500,600,700');
 
+/*-----------------------colors----------------*/
+
+.bg-color-navbar {
+background-color: #676767;
+}
+
+/*-----------------------heading----------------*/
+
 header {
     margin: 0;
+}
+
+.heading {
+margin-left: 50px;
 }
 
 .logo {
@@ -13,4 +25,12 @@ min-height: 360px;
 transition: all .5s ease-in-out;
 -moz-transition: all .5s ease-in-out;
 -webkit-transition: all .5s ease-in-out;
+}
+
+.navbar {
+    font-family: "ubuntu", sans-serif;
+    font-weight: 100px;
+    font-size: 46px;
+    margin-top: 50px;
+    color: #fff;
 }
