3 body sections title/about us/testimonials

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,17 +3,22 @@
 /*-----------------------colors----------------*/
 
 .bg-color-navbar {
-background-color: #676767;
+background-color: #ffe499;
 }
 
-/*-----------------------heading----------------*/
+body {
+    background-color: #a3a375;
+}
+
+/*-----------------------header----------------*/
 
 header {
-    margin: 0;
+margin: 50px;
 }
 
 .heading {
 margin-left: 50px;
+
 }
 
 .logo {
@@ -27,10 +32,35 @@ transition: all .5s ease-in-out;
 -webkit-transition: all .5s ease-in-out;
 }
 
+
+
 .navbar {
     font-family: "ubuntu", sans-serif;
     font-weight: 100px;
     font-size: 46px;
-    margin-top: 50px;
+    margin-top: 100px;
     color: #fff;
+    
 }
+
+/*company name */
+h1 {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 50px;
+    color: grey;
+    text-align: right;
+    padding: 30px;
+}
+
+h2 {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 50px;
+    color: grey;
+    text-align: left;
+    padding: 30px;
+}
+
+h2 p {
+text-align: center;
+}
+
