--- a/assets/style.css
+++ b/assets/style.css
@@ -38,10 +38,12 @@ transition: all .5s ease-in-out;
 .navbar {
     font-family: "ubuntu", sans-serif;
     font-size: 20px;
+    text-align: center;
     border-radius: 20px;
     margin-top: 5px;
     margin-right: 15px;
 }
+
 
 /*company name */
 
@@ -116,6 +118,8 @@ h2 {
     margin-right: 50px;
     margin-bottom: 30px;
 }
+
+
 
 /* 3 column contact footer  */
 
