tidied up html comments, added gallery and find us here sections

--- a/assets/style.css
+++ b/assets/style.css
@@ -118,6 +118,10 @@ h2 {
     margin-bottom: 30px;
 }
 
+/*section title - Join Us  */
+
+/*h2 header will be used for - Join Us */
+
 
 
 /* 3 column contact footer  */
