--- a/assets/style.css
+++ b/assets/style.css
@@ -17,16 +17,29 @@ header {
 margin: 50px;
 }
 
+/*---------------header-container------------*/
+
+.container {
+background-color: #a35ba3;
+width: 1200px;
+margin-left: auto;
+margin-right: auto;
+}
+
+
 .heading {
 margin-left: 50px;
 margin-right: 50px;
 }
 
+/*---------------header-logo------------*/
+/*-----animation code from code institute teaching videos-------*/
+
 .logo {
 background: url("../assets/images/studiofettle-logo.jpg");
 background-position: right;
 background-repeat: no-repeat;
-border-radius: 20px;
+border-radius: 10px;
 background-size: cover;
 min-height: 200px;
 transition: all .5s ease-in-out;
@@ -37,15 +50,16 @@ transition: all .5s ease-in-out;
 
 .navbar {
     font-family: "ubuntu", sans-serif;
-    font-size: 20px;
-    text-align: center;
-    border-radius: 20px;
+    font-size: 15px;
+    text-align: left;
+    border-radius: 10px;
     margin-top: 5px;
-    margin-right: 15px;
+    margin-right: 30px;
+    margin-left: 0px;
 }
 
 
-/*company name */
+/*-----------company-name ------------------*/
 
 h1 {
     font-family: 'Ubuntu', sans-serif;
@@ -55,7 +69,7 @@ h1 {
     padding: 10px;
 }
 
-/*company philosophy */
+/*------------company-philosophy-------------- */
 
 h3 {
     font-family: 'Ubuntu', sans-serif;
@@ -63,6 +77,10 @@ h3 {
     color: grey;
     text-align: center;
     padding: 5px;
+}
+
+#underline {
+text-decoration: underline
 }
 
 #paragraph-size-specific {
