--- a/assets/style.css
+++ b/assets/style.css
@@ -82,6 +82,7 @@ h3 {
 #paragraph-size-specific {
     font-family: 'Ubuntu', sans-serif;
     font-size: 20px;
+    font-style: italic;
     color: rgb(38, 189, 194);
     text-align: center;
     padding: 5px;
