removed .column from css dont know what is was doing nothing chnge with or without it

--- a/assets/style.css
+++ b/assets/style.css
@@ -91,13 +91,9 @@ h3 {
 
 /*------end of section 1 - all pages--------*/
 
-/*------section 2 - all pages - images x3--------*/
+/*------section 2 - all pages - company images x3--------*/
 
- .column {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-}
+ 
 
 /*------end of section 2 - all pages - images x3----*/
 
