--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,8 @@ body {
     background-color: white;
 }
 
-
+.bg-color-main {
+background-color: grey;
 
 
 /*-------header-container and navbar------*/
