removed bg-color-main from css and html in navbar

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,11 +2,7 @@
 
 
 body {
-    background-color: white;
-}
-
-.bg-col-main {
-    background-color: grey;
+    background-color: rgb(227, 237, 240);
 }
 
 .font-main {
