--- a/assets/style.css
+++ b/assets/style.css
@@ -13,9 +13,7 @@ body {
 /*---navbar from bootstrap---*/
 
 .navbar {
-    margin-top: 30px;
-    margin-right: 30px;
-    margin-left: 30px;
+    margin-bottom: 2rem;
 }
 
 /*-------section 1 - all pages---------*/
