changed .heading to .heading-2 in index.hml and css

--- a/assets/style.css
+++ b/assets/style.css
@@ -53,7 +53,7 @@ h3 {
 
 /*---section 3 - home page - about us----*/
 
-.heading {
+.heading-2 {
     font-family: 'Ubuntu', sans-serif;
     font-size: 40px;
     color: rgb(38, 189, 194);
