changed h3 to .heading-3 in html and css. index.html page

--- a/assets/style.css
+++ b/assets/style.css
@@ -30,7 +30,7 @@ body {
 
 /*--------company-philosophy--------*/
 
-h3 {
+.heading-3 {
     font-family: 'Ubuntu', sans-serif;
     font-size: 20px;
     color:rgb(38, 189, 194);
