--- a/assets/style.css
+++ b/assets/style.css
@@ -56,6 +56,7 @@ body {
     font-family: 'Ubuntu', sans-serif;
     color: rgb(38, 189, 194); 
     margin-top: 20px;
+    margin-bottom: 20px
 }
 
 #about-us-paragraph {
