removed margins, added margin auto

--- a/assets/style.css
+++ b/assets/style.css
@@ -55,8 +55,7 @@ body {
 .heading-2 {
     font-family: 'Ubuntu', sans-serif;
     color: rgb(38, 189, 194); 
-    margin-top: 20px;
-    margin-bottom: 20px
+    margin: 20px, auto;
 }
 
 #about-us-paragraph {
