--- a/assets/style.css
+++ b/assets/style.css
@@ -75,8 +75,12 @@ body {
     margin-bottom: 30px;
 }
 
+.client-img {
+    height: 15rem;
+}
+
 .client-feedback {
-padding: 0 1rem;
+    padding: 0 1rem;
 }
 
 /*-----end of section 3 home page-----*/
