change background footer color to match the navbar in css

--- a/assets/style.css
+++ b/assets/style.css
@@ -89,7 +89,7 @@ body {
 /*-----footer-------*/
 
 .footer-background {
-    background-color: slategray
+    background-color: #708090;
 }
 
 #fb-font-size {
