added .navbar ul li a to make Navbar font the same as looked different

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,10 @@ body {
     background-color: #708090;
 }
 
+.navbar ul li a {
+    font-family: "ubuntu", sans-serif;
+}
+
 /*-------section 1 - all pages---------*/
 /*------company-name---------*/
 
