.active a - added to hightlight the current webpage

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,10 @@ body {
     font-family: "ubuntu", sans-serif;
 }
 
+.active a {
+    color: #6ed8db !important;
+}
+
 /*-------section 1 - all pages---------*/
 /*------company-name---------*/
 
