made all services title bold add id=bold and #bold

--- a/assets/style.css
+++ b/assets/style.css
@@ -98,8 +98,8 @@ body {
 
 /*-----section - our services-----*/
 
-#solid {
-    text-decoration-style: solid;
+#bold {
+    font-weight: bold;
 }
 
 
