--- a/assets/style.css
+++ b/assets/style.css
@@ -12,6 +12,9 @@ body {
 
 /*---navbar from bootstrap---*/
 
+/*---code here came from assistance and guidance via---*/
+/*---Anthony O Brien - code institute student---*/
+
 .navbar {
     margin-bottom: 2rem;
     background-color: #708090;
@@ -29,6 +32,8 @@ body {
 .active a {
     color: #6ed8db !important;
 }
+
+/*---end of code coming from Anthony O Brien---*/
 
 /*------company-name---------*/
 
